--- a/website-week-4/styles.css
+++ b/website-week-4/styles.css
@@ -2,29 +2,40 @@
     box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background-color: #fff9efff;
+}
+
+/* Header */
+
 .header--container{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     width: 100%;
-    padding: 1rem 0 1rem 0;
+    padding: 0 0 1rem 0;
+
     border-bottom: 1px solid gray;
     background-color: ;
 }
 
-.header--float--container{
+.header--flex--container{
     display: flex;
     flex-direction: row;
-    padding: 0 0 0 0;
+    white-space: nowrap;
+    padding: 26px 0 0 0;
     width: 100%;
     height: 6rem;
+    
 }
 
 .header--text{
-    display: flex;
-    text-align: left;
     font-family: 'EB Garamond', serif; 
     font-size: 25px;
+    text-decoration: none;
+    color: #a61c00ff;
 }
 
 .logo--text{
@@ -32,56 +43,171 @@
     width: 100%;
     text-align: center;
     font-family: 'EB Garamond', serif; 
+    text-decoration: underline gray;
     padding: 0 0 0 0;
     margin: 0 0 0 0;
     font-size: 15px;
+    color: #a61c00ff;
 
 }
 
 .button--left{
     display: flex;
-    align-content: flex-start;
+    align-content: flex-end;
+    white-space: nowrap;
     margin: 35px 3rem 0 0;
     padding: 0 4rem 0 0;
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #ffd700;
     background-color: ;
 }
 
 .button--middle{
     display: flex;
     align-content: flex-start;
+    white-space: nowrap;
     margin: 35px 3rem 0 0;
     padding: 0 4rem 0 0;
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #ffd700;
     background-color: ;
 }
 
 .button--right{
     display: flex;
     align-content: flex-start;
+    white-space: nowrap;
     margin: 35px 3rem 0 0;
     padding: 0 4rem 0 0;
-    border-bottom: 5px solid black;
+    border-bottom: 5px solid #ffd700;
     background-color: ;
 }
 
 .logo--container{
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
     justify-content: flex-start;
     align-content: flex-end;
+    width: 100%;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 }
 
 .logo{
-    display: flex;
-    justify-content: flex-end;
-    align-content: flex-end;
+    display: inline-flex;
+    justify-content: ;
+    align-content: ;
     max-width: 100%;
     height: 70px;
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 
 }
+
+.logo--container--img{
+    display: inline-flex;
+    width: 100%;
+}
+
+/* greeting box */
+
+.greeting--box--container{
+    white-space: nowrap;
+    border-bottom: 1px solid gray;
+    padding-bottom: 5px;
+}
+
+.greeting--box{
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    padding: 5rem 0 5px 2rem;
+    margin: 5px 0 0 0;
+    background-color: #a61c00ff;
+}
+
+.greeting--text{
+    display: flex;
+    justify-content: flex-start;
+    white-space: nowrap;
+    width: 45%;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 80px;
+    font-family: 'EB Garamond', serif;
+    color: #ffd700;
+    font-weight: ;
+}
+
+.greeting--sub--text{
+    width: 50%;
+    margin-top: 0;
+    margin-bottom: 10px;
+    font-family: 'EB Garamond', serif;
+    font-size: 35px;
+    color: #ffd700;
+}
+
+.second--header{
+    display: inline-flex;
+    flex-direction: row;
+    white-space: nowrap;
+    min-width: 100%;
+}
+
+.breaking--news--container{
+    padding-top: 5px;
+    padding-bottom: 15px;
+    margin-right: 10px;
+    width: 75%;
+    border-bottom: 1px solid gray;
+}
+
+.breaking--news{
+    margin-top: 0;
+    margin-bottom: 0;
+    margin-right: 75%;
+    font-family: 'EB Garamond', serif; 
+    color: #a61c00ff;
+}
+
+.newsletter--container{
+    display: inline-flex;
+    padding-top: 5px;
+    padding-bottom: 15px;
+    width: 24%;
+    border-bottom: 1px solid gray;
+}
+
+.newsletter{
+    margin-top: 0;
+    margin: 0;
+    font-family: 'EB Garamond', serif; 
+    color: #a61c00ff;
+}
+
+/* Main Content */
+
+.main--content--container{
+    padding: 1rem;
+    margin: 15px 10px 0 1.5rem;
+    height: 100%;
+    background-color: black;
+}
+
+.main--article{
+
+}
+
+.title{
+
+}
+
+.newsletter--content{
+
+}
+
+
+
+
+
+
 
