--- a/website-week-4/styles.css
+++ b/website-week-4/styles.css
@@ -84,15 +84,14 @@ body{
 .logo--container{
     display: inline-flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-content: flex-end;
-    width: 100%;
+    justify-content: flex-end;
+    align-items: flex-end;
     margin: 0 0 0 0;
-    padding: 0 0 0 0;
+    padding: 0 4rem 0 0;
 }
 
 .logo{
-    display: inline-flex;
+    display: flex;
     justify-content: ;
     align-content: ;
     max-width: 100%;
@@ -104,13 +103,17 @@ body{
 
 .logo--container--img{
     display: inline-flex;
+    justify-content: center;
     width: 100%;
 }
 
 /* greeting box */
 
 .greeting--box--container{
+    display: flex;
+    flex-direction: row;
     white-space: nowrap;
+    background-color: #a61c00ff;
     border-bottom: 1px solid gray;
     padding-bottom: 5px;
 }
@@ -145,6 +148,7 @@ body{
     font-size: 35px;
     color: #ffd700;
 }
+
 
 .second--header{
     display: inline-flex;
@@ -187,23 +191,103 @@ body{
 /* Main Content */
 
 .main--content--container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: ;
     padding: 1rem;
     margin: 15px 10px 0 1.5rem;
     height: 100%;
-    background-color: black;
+    background-color: ;
 }
 
 .main--article{
+    width: 80%;
+    padding-right: 30px;
+}
 
+
+.newsletter--content{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    padding-left: 20px;
+    border-left: 1px solid gray;
+}
+
+.newsletter--prompt{
+    font-family: 'EB Garamond', serif; 
+    color: #a61c00ff;
 }
 
 .title{
+    font-family: 'EB Garamond', serif; 
+    color: #a61c00ff;
+    text-decoration-line: underline;
+}
+
+.article--text{
+    font-family: 'EB Garamond', serif; 
+    color: black;
+}
+
+.image--1--container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+.image--1{
+    width: 75%;
+    border: 10px solid #ffd700;
+    border-style: double;
+}
+
+.image--caption{
+    width: 40%;
+    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
+    background-color: #dedede;
+    color: #a61c00ff;
+    font-family: 'EB Garamond', serif;
+}
+
+.image--2--container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+.image--2{
+    width: 40%;
+    border: 10px solid #ffd700;
+    border-style: double;
+}
+
+.image--3--container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
+}
+
+.image--3{
+    border: 10px solid #ffd700;
+    border-style: double;
+}
+
+.footer--container{
+    padding: 4rem;
+    background-color: gray;
+}
+
+.footer.content{
 
 }
 
-.newsletter--content{
-
-}
 
 
 
